--- a/test2/style.css
+++ b/test2/style.css
@@ -24,7 +24,6 @@ body {
     width: 720px;
     height: 120px;
     margin: 10px;
-    min-width: 340px;
     border-radius: 8px;
     display: inline-flex;
     justify-content: center;
@@ -42,7 +41,6 @@ h1 {
     width: 720px;
     height: 60px;
     margin: 10px;
-    min-width: 340px;
     border-radius: 8px;
     display: inline-flex;
     justify-content: center;
@@ -93,13 +91,26 @@ nav a:hover {
     width: 720px;
     height: 280px;
     margin: 10px;
-    min-width: 340px;
     border-radius: 8px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.s1 :hover {
-    width: 820px;
-    height: 380px;
+#photos {
+    background: rgb(0, 0, 0, .2);
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 8px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    width: 150px;
+    height: auto;
 }
 
 .container2 {
@@ -113,7 +124,6 @@ nav a:hover {
     width: 500px;
     height: 580px;
     margin: 10px;
-    min-width: 240px;
     border-radius: 8px;
 }
 
@@ -122,7 +132,6 @@ nav a:hover {
     width: 200px;
     height: 580px;
     margin: 10px;
-    min-width: 40px;
     border-radius: 8px;
 }
 
@@ -136,6 +145,5 @@ nav a:hover {
     width: 720px;
     height: 60px;
     margin: 10px;
-    min-width: 340px;
     border-radius: 8px;
 }
