--- a/test2/style.css
+++ b/test2/style.css
@@ -195,7 +195,7 @@
         margin-left: 35px;
         margin-right: 35px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: black;
+        color: rgb(22, 22, 22);
     }
     
     .container3 {
