--- a/test2/style.css
+++ b/test2/style.css
@@ -198,6 +198,28 @@
         color: rgb(22, 22, 22);
     }
     
+    #join2 {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        width: 250px;
+    }
+    
+    button {
+        width: 175px;
+        height: 25px;
+        background: grey;
+        margin: 10px;
+        border-bottom: none;
+        border-radius: 8px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        color: white;
+        font-family: "bigdeal";
+    }
+    
     .container3 {
         display: grid;
         justify-content: center;
@@ -238,4 +260,7 @@
         margin-right: 35px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: white;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
     }
